--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@ input {
 }
 
 .movie-container {
+
+  position: relative;
   box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   height: 400px;
 
@@ -73,24 +75,45 @@ input {
 
 }
 
-.movie-img {
-  flex: 7;
+.img-container {
 
-  overflow: none;
-  height: 70%;
+  overflow: hidden;
 
-  aspect-ratio: 0.7
+}
+
+.img-container img {
+
+  width: 100%;
+  /* height: 70%; */
+  /* object-fit: contain; */
+
 }
 
 .info {
-  height: 30%;
+
+  border-radius: 0 60px 0 0;
+
+  position: absolute;
+
+  left: 50%;
+  bottom: 0;
+
+  transform: translateX(-50%);
+
   font-size: 1.2rem;
-  margin: 20px;
-  flex: 3;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background: #ffffffa2;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.497);
 }
+
+.info p {
+  margin: 10px;
+  color: black;
+}
+
 
 .nav-bar {
   width: 100vw;
